<resources>
    <string name="app_version">1.1.0</string>
    <string name="app_version1">当前版本：2.0.1</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="common_head_title">标题</string>
    <string name="common_head_back">返回</string>
    <string name="common_head_func">代驾</string>
    <string name="group_position">group</string>
    <string name="child_position">child</string>
    <string name="child_position_null">child_null</string>
    <string name="net_request_failure">网络请求失败，请检查网络是否连接。</string>
    <string name="login_title">用户登录</string>
    <string name="login_failure">用户名或密码不正确</string>
    <string name="login_please_input_username">请输入手机号</string>
    <string name="login_please_input_password">请输入密码</string>
    <string name="login_password_len_error">密码长度必须大于6位</string>
    <string name="login_net_false">当前网络不可用，请检查您的网络</string>
    <string name="user_unregister">账户未注册，请先注册</string>
    <string name="username_or_password_error">用户名或密码错误</string>
    <string name="user_register_title">用户注册</string>
    <string name="please_input_true_telephone">请输入正确的手机号</string>
    <string name="phone_early_register">该电话号码已注册</string>
    <string name="please_input_telephone">请输入手机号码</string>
    <string name="please_input_authcode">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_two_input_password">请输入确认密码</string>
    <string name="authcode_erro">请输入验证码</string>
    <string name="password_is_refrences">两次输入密码不一致,请重新输入</string>
    <string name="password_length_error">密码长度不能小于6位</string>
    <string name="register_success">恭喜您,注册成功!</string>
    <string name="register_phone_bind_code_error">手机号与获取验证码的手机号不一致</string>
    <string name="password_gs_error">密码不能包含特殊字符</string>
    <string name="forget_password_title">找回密码</string>
    <string name="phone_no_register">电话号码未注册</string>
    <string name="account_manager_ac">账户管理</string>
    <string name="email_bind_title">绑定邮箱</string>
    <string name="email_is_not_null">邮箱地址不能为空</string>
    <string name="email_geshi_error">邮箱格式不正确</string>
    <string name="email_early_bind">该邮箱已绑定</string>
    <string name="email_early_use">该邮箱已使用</string>
    <string name="eamil_unbind">未绑定</string>
    <string name="email_send_success">我们已发送一封邮件至您的邮箱，请登录您的邮箱进行验证</string>
    <string name="update_email_bind_title">修改邮箱绑定</string>
    <string name="update_email_bind_success">修改邮箱绑定成功</string>
    <string name="phone_bind_title">修改手机绑定</string>
    <string name="phone_early_bind">新手机号码已注册</string>
    <string name="please_input_old_phone">请输入原手机号码</string>
    <string name="old_phone_error">原手机号码不正确</string>
    <string name="new_phone_empty">请输入新手机号码</string>
    <string name="new_phone_error">新手机号码格式不正确</string>
    <string name="phone_bind_success">修改绑定手机成功</string>
    <string name="password_error">密码不能包含特殊字符</string>
    <string name="car_refuel">加油</string>
    <string name="wash_car">洗车</string>
    <string name="car_maintenance">保养</string>
    <string name="car_maintain">维修</string>
    <string name="park">停车</string>
    <string name="prompt_input_ps">请设置密码，用于在线支付和提现</string>
    <string name="prompt_six_ps">输入六位数字作为支付密码</string>
    <string name="prompt_consistent">两次输入的密码不相符，请重新输入</string>
    <string name="confirm_password">请再次输入密码</string>
    <string name="prompt_balance_password">请输入您的密码</string>
    <string name="prompt_set_password_problemyi">问题一</string>
    <string name="prompt_set_password_problemer">问题二</string>
    <string name="prompt_set_password_problemsan">问题三</string>
    <string name="prompt_set_password_problem_default">请选择问题</string>
    <string name="prompt_set_password_answer">答案</string>
    <string name="prompt_set_password_input_answer">请填你的答案</string>
    <string name="prompt_set_password_button_submit">提交</string>
    <string name="service_menu">服务选项</string>
    <string name="local_car">本地车辆</string>
    <string name="nonlocal_car">异地车辆</string>
    <string name="carservice_type_nj">车辆年检</string>
    <string name="carservice_type_gh">车辆过户</string>
    <string name="carservice_type_sp">车辆上牌</string>
    <string name="carservice_type_tdzj">提档转籍</string>
    <string name="carservice_type_bbpz">补办牌照</string>
    <string name="carservice_type_xszbb">行驶证补办</string>
    <string name="carservice_type_dkwts">代开委托书</string>
    <string name="carservice_other_service">其他服务</string>
    <string name="vehicle_service_title">车辆服务</string>
    <string name="vehicle_platenum_type">号牌类型</string>
    <string name="vehicle_platenum">车牌号码</string>
    <string name="vehicle_enginenum">发动机号</string>
    <string name="vehicle_type">\t\t\t车型</string>
    <string name="vehicle_nj_remind">年检提醒</string>
    <string name="vehicle_bx_remind">保险提醒</string>
    <string name="vehicle_remark">\t备注名</string>
    <string name="choose_vehicle_service_type">选择服务类型</string>
    <string name="please_add_vehicle">请先添加一辆车</string>
    <string name="please_choose_service_type">请选择服务类型</string>
    <string name="please_input_contact">请输入联系人</string>
    <string name="please_input_contactphont">请输入联系电话</string>
    <string name="contactphone_error">电话号码不正确</string>
    <string name="choose_carbrand_title">品牌选车</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="illegal_service_title">违章服务</string>
    <string name="local_illegal">本地违章</string>
    <string name="nonlocal_illegal">异地违章</string>
    <string name="illegalservice_type_jjwz">交警违章</string>
    <string name="illegalservice_type_gswz">高速违章</string>
    <string name="illegalservice_type_cgwz">城管违章</string>
    <string name="license_number">证号</string>
    <string name="file_number">档案编号</string>
    <string name="license_date">领证日期</string>
    <string name="license_vehicle_type">准驾车型</string>
    <string name="license_valid_for">有效期限</string>
    <string name="license_service_title">驾证服务</string>
    <string name="please_add_license_num">请先添加您的驾证</string>
    <string name="release_task_success">发布任务成功!</string>
    <string name="release_task_failure">发布任务失败!</string>
    <string name="task_early_release">该任务已发布，不能重复发布!</string>
    <string name="illegal_emg_info_title">违章信息</string>
    <string name="add_vehicle_title">添加车辆</string>
    <string name="please_input_plate_num">请输入车牌号码</string>
    <string name="please_choose_vehicle_type">请选择车辆类型</string>
    <string name="please_choose_vehicle_brand">请选择车辆品牌</string>
    <string name="please_input_engine_num">请输入发动机号</string>
    <string name="please_input_frame_num">请输入车架号</string>
    <string name="please_choose_register_time">请选择车辆登记时间</string>
    <string name="register_time_error">车辆登记时间不能大于当前时间</string>
    <string name="please_choose_insure_time">请选择保险提醒时间</string>
    <string name="insure_time_error">保险有效时间不能大于当前时间</string>
    <string name="platenum_error">车牌号不正确</string>
    <string name="enginenum_error">发动机号不正确</string>
    <string name="framenum_error">车辆识别代码不正确</string>
    <string name="small_vehile">小型汽车</string>
    <string name="big_vehicle">大型汽车</string>
    <string name="wj_vehile">外籍汽车</string>
    <string name="lsl_mtc">两三轮摩托车</string>
    <string name="qb_mtc">轻便摩托车</string>
    <string name="guache">挂车</string>
    <string name="teaching_vehicle">教练车</string>
    <string name="please_choose_vehicle">请选择车辆</string>
    <string name="vehicle_manager_title">车辆管理</string>
    <string name="please_choose_illegal_by_car">请选择要查询违章的车辆</string>
    <string name="license_manager_title">驾证管理</string>
    <string name="add_license_title">添加驾证</string>
    <string name="choose_license_title">选择驾证</string>
    <string name="please_input_license_num">请输入驾证号</string>
    <string name="please_choice_license_city">请选择驾证签发地区</string>
    <string name="please_input_filenum">请输入档案编号</string>
    <string name="please_choose_license_date">请选择驾证签发日期</string>
    <string name="please_choose_vehivle_type">请选择准驾车型</string>
    <string name="please_input_valid_for">请输入有效期限</string>
    <string name="filenum_error">档案编号不正确</string>
    <string name="license_register_time_error_hint">驾证签发时间不大于当前时间</string>
    <string name="valid_for_error_hint">有效期只能为1&#8211;99年</string>
    <string name="personal_center_title">个人中心</string>
    <string name="personal_data_bj_title">编辑个人信息</string>
    <string name="task_manager_title">我的订单</string>
    <string name="task_search_title">订单查找</string>
    <string name="task_details_title">订单详情</string>
    <string name="cancel_order">取消订单</string>
    <string name="order_confirm_finish">确认完成</string>
    <string name="all_task_type">全部</string>
    <string name="illegal_task_type">违章服务</string>
    <string name="vehicle_task_type">车辆服务</string>
    <string name="licence_task_type">驾证服务</string>
    <string name="all_task_status">全部</string>
    <string name="unfinished_task_status">未完成</string>
    <string name="finished_task_status">已完成</string>
    <string name="all_order_role">全部</string>
    <string name="user_order_role">用户订单</string>
    <string name="business_order_role">商家订单</string>
    <string name="assign_order_role">外派订单</string>
    <string name="all_order_type">全部</string>
    <string name="illegal_order_type">违章服务</string>
    <string name="vehicle_order_type">车辆服务</string>
    <string name="licence_order_type">驾证服务</string>
    <string name="all_order_status">全部</string>
    <string name="unfinished_order_status">未完成</string>
    <string name="finished_order_status">已完成</string>
    <string name="password_manager_title">密码管理</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="old_password_error">原密码错误</string>
    <string name="please_input_newpassword">请输入新密码</string>
    <string name="please_input_newpassword_ok">请输入确认密码</string>
    <string name="password_uninclude_space">密码不能包含空格</string>
    <string name="password_length">密码长度为6&#8211;16位</string>
    <string name="twice_password_error">两次输入的密码不一致，请重新输入</string>
    <string name="update_password_success">修改密码成功!</string>
    <string name="Choose_city_title">地区城市</string>
    <string name="business_center_title">我的名片</string>
    <string name="cwjjr_title">车务经纪人</string>
    <string name="cwjjr_details_title">经纪人详情</string>
    <string name="my_store_title">我的店铺</string>
    <string name="business_db_title">商家代办</string>
    <string name="please_input_business_name">商家名称不能为空</string>
    <string name="please_input_business_phone">商家电话不能为空</string>
    <string name="please_input_yz_phone">电话格式无效</string>
    <string name="please_input_update_name">请输入您要修改的名称</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载更多&#8230;&#8230;&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="red_count">红包个数</string>
    <string name="red_count_hint">填写个数</string>
    <string name="red_all_money">总金额</string>
    <string name="red_money_hint">填写金额</string>
    <string name="red_state_random">当前为随机红包，</string>
    <string name="action_changeto_normalred">改为普通红包</string>
    <string name="redpacket_remark_hint">恭喜发财，大吉大利！</string>
    <string name="takein_redpacket">塞钱进红包</string>
    <string name="redpacket_pay_detail">使用支付宝支付，</string>
    <string name="action_change_paykind">更换</string>
    <string name="default_red_money">¥0.00</string>
    <string name="unit_count">个</string>
    <string name="unit_money">元</string>
    <string name="binding_bank_card">请绑定本人的银行卡</string>
    <string name="bank_name">姓名</string>
    <string name="bank_number">卡号</string>
    <string name="edittext_bank">请填写你本人的银行卡号</string>
    <string name="xiayibu">下一步</string>
    <string name="verification_code">已发送验证码至</string>
    <string name="bank_obtain_verification">重新发送</string>
</resources>