<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/wallet_background"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/binding_bank_card"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/darkgray"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="40dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/bank_number"
            android:textSize="@dimen/tf_size_14"
            android:layout_marginLeft="10dp"
            android:textColor="@color/balance_black"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_bank_number"
            android:layout_width="match_parent"
            android:textSize="@dimen/tf_size_14"
            android:hint="@string/edittext_bank"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:textColorHint="@color/darkgray"
            android:textColor="@color/balance_black"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/add_bank_next"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/xiayibu"
        android:layout_marginRight="10dp"
        android:background="@drawable/login_btn_bg"
        android:textColor="@color/white"
        android:layout_height="44dp" />

</LinearLayout>
