<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_group_red_packet_send"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efeef3"
    tools:context="com.chewuwuyou.app.transition_view.activity.GroupRedPacketSendActivity">
    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/control_12"
        android:paddingRight="@dimen/control_12"
        android:paddingTop="@dimen/control_16"
        android:orientation="vertical"
        >
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:paddingBottom="2dp"
           android:paddingLeft="@dimen/control_12"
           android:paddingRight="@dimen/control_12"
           android:background="@drawable/send_redpacket_relbackgroud">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/red_count"
            android:textColor="@color/color_494949"
            android:textSize="@dimen/tf_size_18"/>
           <EditText
               android:id="@+id/edt_redpacket_num"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:ems="6"
               android:layout_centerVertical="true"
               android:background="@null"
               android:hint="@string/red_count_hint"
               android:gravity="center_vertical|right"
               android:layout_toLeftOf="@+id/text_unit"
               android:layout_marginRight="@dimen/control_8"
               android:numeric="integer"
               android:maxLength="4"
               android:textSize="@dimen/tf_size_16"
               android:textCursorDrawable="@null"
               android:textColorHint="@color/color_b2b2b2"/>
           <TextView
               android:id="@+id/text_unit"
               android:layout_width="wrap_content"
               android:layout_centerVertical="true"
               android:layout_height="wrap_content"
               android:text="@string/unit_count"
               android:textSize="@dimen/tf_size_18"
               android:maxLength="10"
               android:layout_alignParentRight="true"
               android:textColor="@color/color_494949"/>
           <TextView
               android:id="@+id/tv_numlimit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="红包个数不能为0"
               android:textColor="@color/color_fb4d55"
               android:layout_alignParentBottom="true"
               android:layout_alignParentRight="true"
               android:textSize="@dimen/tf_size_12"
               android:visibility="gone"
             />
       </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/control_14"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingBottom="2dp"
            android:paddingLeft="@dimen/control_12"
            android:paddingRight="@dimen/control_12"
            android:background="@drawable/send_redpacket_relbackgroud">
            <TextView
                android:id="@+id/text_kind_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/red_all_money"
                android:textColor="@color/color_494949"
                android:textSize="@dimen/tf_size_18"/>
            <EditText
                android:id="@+id/edt_redpacket_money"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/red_money_hint"
                android:ems="10"
                android:gravity="center_vertical|right"
                android:layout_toLeftOf="@+id/text_money_unit"
                android:layout_marginRight="@dimen/control_8"
                android:inputType="numberDecimal"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/tf_size_16"
                android:maxLength="9"
                android:textColorHint="@color/color_b2b2b2"/>
            <TextView
                android:id="@+id/text_money_unit"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:text="@string/unit_money"
                android:textSize="@dimen/tf_size_18"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_494949"/>
            <TextView
                android:id="@+id/tv_moneylimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="单个红包金额不能低于0.01元"
                android:textColor="@color/color_fb4d55"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/tf_size_12"
                android:visibility="gone"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            >
            <TextView
                android:id="@+id/text_red_kind_detal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_state_random"
                android:textColor="@color/color_494949"/>
            <TextView
                android:id="@+id/text_red_kind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_changeto_normalred"
                android:clickable="true"
                android:textColor="@color/color_fb4d55"/>

        </LinearLayout>

        <EditText
            android:id="@+id/text_redpacket_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:hint="@string/redpacket_remark_hint"
            android:gravity="left"
            android:paddingTop="16dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/color_494949"
            android:maxLength="16"
            android:background="@drawable/send_redpacket_relbackgroud"/>

        <TextView
            android:id="@+id/text_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:text="@string/default_red_money"
            android:textColor="@color/color_454547"
            android:textSize="@dimen/tf_size_48"/>
        <TextView
            android:id="@+id/tv_action_pay"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/takein_redpacket"
            android:textColor="@color/color_fff6f6"
            android:textSize="@dimen/tf_size_20"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/send_redpacket_backgroud"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            >
            <TextView
                android:id="@+id/text_paykind_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redpacket_pay_detail"
                android:textColor="@color/color_494949"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/text_paykind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_change_paykind"
                android:clickable="true"
                android:textColor="@color/color_6ecde8"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
